# Yona

./: .env.example  .gitignore  CLAUDE.md  README.md  htmlipa.htm  optimization_plan.md  plan.md  pyproject.toml  requirements.txt  test.md
.claude/: settings.local.json
.claude/projects/-home-bart-workspace-code-Yona/memory/: project_mcp_plan.md
config/: default.yaml
config/prompts/: system_prompt.txt  system_prompt.txt.bak
data/history/: 2026-03-26.json  2026-03-27.json  2026-04-01.json  2026-04-02.json  2026-04-03.json  2026-04-06.json  2026-04-07.json  2026-04-14.json  2026-04-15.json
docs/: custom-wake-word-training.md
src/: __init__.py  audio.py  config.py  events.py  llm.py  main.py  pipeline.py  state.py  stt.py  tts.py  vad.py  wake.py  web.py
src/audio/: __init__.py  audio_buffer.py  audio_manager.py  vad.py
src/core/: __init__.py  config.py  event_bus.py  state_machine.py
src/llm/: __init__.py  base.py  chat_handler.py  context.py  gemini_handler.py  ollama_handler.py  openai_handler.py
src/stt/: __init__.py  transcriber.py
src/tts/: __init__.py  synthesizer.py
src/utils/: __init__.py  logger.py
src/wake_word/: __init__.py  detector.py  trainer.py
tests/: __init__.py  bench_supertonic.py  conftest.py  test_audio.py  test_audio_buffer.py  test_config.py  test_context.py  test_event_bus.py  test_events.py  test_goodbye_intent.py  test_hw_audio.py  test_hw_audio_manager.py  test_hw_bargein.py  test_hw_bargein_pipeline.py  test_hw_custom_llm.py  test_hw_custom_pipeline.py  test_hw_error_recovery.py  test_hw_full_custom.py  test_hw_llm.py  test_hw_pipeline.py  test_hw_stt.py  test_hw_tts.py  test_hw_tts_debug.py  test_hw_vad.py  test_hw_wake.py  test_llm.py  test_llm_context.py  test_main.py  test_openai_handler.py  test_pipeline.py  test_pipeline_phrase.py  test_state.py  test_state_machine.py  test_stt.py  test_tts.py  test_vad.py  test_wake.py  test_wake_live.py
