[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yona"
version = "0.1.0"
description = "Voice chat application for Nvidia Jetson Orin Nano with wake word detection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yona Team"}
]
dependencies = [
    "openwakeword>=0.6.0",
    "faster-whisper>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "supertonic>=1.1.2",
    "onnxruntime>=1.16.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
    "fastapi>=0.115.0",
    "sse-starlette>=2.3.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
yona = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
